added constructor details screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,16 +77,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: RezervBold
+      fonts:
+        - asset: assets/Exo2-Bold.ttf
+    - family: Rezerv
+      fonts:
+        - asset: assets/Exo2-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/janPro_Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
