--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   cached_network_image: ^3.3.1
   provider: ^6.1.2
+  syncfusion_flutter_calendar: ^25.2.5
 
 dev_dependencies:
   flutter_test:
